HUB-423: Fix menu layout on course embed pages
The course embed React component imports the full styleguide. This
overrides (reverts) some of the styles that the Guide has already
overridden causing layout breaking on secondary menu. Make some of the
Guide styles important to enforce them. Later on we should look into
removing most of the Guide's overrides and use as much of the styleguide
styles as possible and only do minimal overrides (if this is feasible).

--- a/themes/uhsg_theme/sass/components/_main-menu.scss
+++ b/themes/uhsg_theme/sass/components/_main-menu.scss
@@ -1,9 +1,9 @@
 .main-menu {
-  overflow: visible;
+  overflow: visible !important;
   @include breakpoint($small) {
     > ul.menu {
-      padding-top: 0;
-      padding-bottom: 0;
+      padding-top: 0 !important;
+      padding-bottom: 0 !important;
     }
     li.is-lvl1 {
       > a, span[data-drupal-link-system-path] {
@@ -42,7 +42,7 @@
   li.is-lvl2 {
     > a {
       @include breakpoint($small) {
-        padding: 20px 30px;
+        padding: 20px 30px !important;
       }
     }
   }
